еще немножко файлов

--- a/main.html
+++ b/main.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Генератор случайных чисел высшей школы управления</title>
+    <link rel="stylesheet" href="./dist/style/style.css">
 </head>
 <body>
-    
+    <div class="header">
+        <div class="flex-header">
+            <div class="flex-item">
+                <a href="http://переподготовка-вшу.белгу.рф/" target="__blank">
+                    <img src="/dist/images/vhsu-hor4.png" alt="Высшая школа управления">
+                </a>
+            </div>
+            <div class="flex-item">
+                <h1>Высшая школа управления</h1>
+            </div>
+            
+            <div class="flex-item">
+                <a href="https://www.bsu.edu.ru/bsu/">
+                    <img src="/dist/images/Logotip_BSU.png" alt='НИУ "БелГУ"'>
+                </a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
