--- a/main.html
+++ b/main.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Генератор случайных чисел высшей школы управления</title>
+    <link rel="icon" type="image/png" href="./dist/images/favlogo-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="./dist/images/favlogo-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="./dist/images/favlogo-48x48.png" sizes="48x48">
     <link rel="stylesheet" href="./dist/style/style.css">
 </head>
 <body>
