--- a/main.html
+++ b/main.html
@@ -4,30 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Генератор случайных чисел высшей школы управления</title>
-    <link rel="icon" type="image/png" href="./dist/images/favlogo-16x16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="./dist/images/favlogo-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="./dist/images/favlogo-48x48.png" sizes="48x48">
-    <link rel="stylesheet" href="./dist/style/style.css">
+    <title>Рандомайзер ВШУ</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto+Slab:300,400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link rel="icon" type="image/png" href="./dir/images/favicons/favlogo-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="./dir/images/favicons/favlogo-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="./dir/images/favicons/favlogo-48x48.png" sizes="48x48">
+    <link rel="stylesheet" href="./dir/style/normalize.css">
+    <link rel="stylesheet" href="./dir/style/style.css">
 </head>
 <body>
-    <div class="header">
-        <div class="flex-header">
-            <div class="flex-item">
-                <a href="http://переподготовка-вшу.белгу.рф/" target="__blank">
-                    <img src="/dist/images/vhsu-hor4.png" alt="Высшая школа управления">
-                </a>
+        <div class="header">
+            <div class="toolbar">
+                <div class="flex-toolbar">
+                    <div class="flex-toolbar-questions flex-toolbar-item">
+                        <p>Есть вопросы?</p>
+                    </div>
+                    <div class="flex-toolbar-number flex-toolbar-item">
+                        <div></div>
+                        <p>+7 (4722) 30-11-80 </p>
+                    </div>
+                    <div class="flex-toolbar-email flex-toolbar-item">
+                        <div></div>
+                        <p>vshu@bsu.edu.ru</p>
+                    </div>
+                </div>
             </div>
-            <div class="flex-item">
-                <h1>Высшая школа управления</h1>
-            </div>
-            
-            <div class="flex-item">
-                <a href="https://www.bsu.edu.ru/bsu/">
-                    <img src="/dist/images/Logotip_BSU.png" alt='НИУ "БелГУ"'>
-                </a>
+            <div class="flex-header">
+                <div class="flex-item">
+                    <a href="http://переподготовка-вшу.белгу.рф/" target="__blank">
+                        <img src="/dir/images/vhsu-hor4.png" alt="Высшая школа управления">
+                    </a>
+                </div>
+                <div class="flex-item">
+                    <h1>Высшая школа управления</h1>
+                </div>
+                
+                <div class="flex-item">
+                    <a href="https://www.bsu.edu.ru/bsu/" target="__blank">
+                        <img src="/dir/images/svg/Logotip_BSU.svg" alt='НИУ "БелГУ"'>
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
 </body>
 </html>
