Сделал свг иконки в тулбар

--- a/main.html
+++ b/main.html
@@ -21,11 +21,11 @@
                     </div>
                     <div class="flex-toolbar-number flex-toolbar-item">
                         <div></div>
-                        <p>+7 (4722) 30-11-80 </p>
+                        <a href="tel:+7(4722)301180">+7 (4722) 30-11-80</a>
                     </div>
                     <div class="flex-toolbar-email flex-toolbar-item">
                         <div></div>
-                        <p>vshu@bsu.edu.ru</p>
+                        <a href="mailto:vshu@bsu.edu.ru">vshu@bsu.edu.ru</a>
                     </div>
                 </div>
             </div>
