Попытка сделать другой хэдер

--- a/main.html
+++ b/main.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Рандомайзер ВШУ</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto+Slab:300,400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto:300,400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="icon" type="image/png" href="./dir/images/favicons/favlogo-16x16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="./dir/images/favicons/favlogo-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="./dir/images/favicons/favlogo-48x48.png" sizes="48x48">
-    <link rel="stylesheet" href="./dir/style/normalize.css">
-    <link rel="stylesheet" href="./dir/style/style.css">
+    <link rel="stylesheet" href="./dir/style/normalize.css" type="text/css">
+    <link rel="stylesheet" href="./dir/style/style.css" type="text/css">
 </head>
 <body>
         <div class="header">
@@ -30,20 +30,26 @@
                 </div>
             </div>
             <div class="flex-header">
-                <div class="flex-item">
+                <div class="flex-header-item">
                     <a href="http://переподготовка-вшу.белгу.рф/" target="__blank">
                         <img src="/dir/images/vhsu-hor4.png" alt="Высшая школа управления">
                     </a>
                 </div>
-                <div class="flex-item">
+                <div class="flex-header-item">
                     <h1>Высшая школа управления</h1>
                 </div>
-                
-                <div class="flex-item">
+                <div class="flex-header-item">
                     <a href="https://www.bsu.edu.ru/bsu/" target="__blank">
                         <img src="/dir/images/svg/Logotip_BSU.svg" alt='НИУ "БелГУ"'>
                     </a>
                 </div>
+            </div>
+
+            <!-- Доролнительная информация --> 
+            <div class="additional-info">
+                <p class="additional-info__text">Цель ВШУ - помочь реализовать возможности и потенциал специалистов, которые хотят большего и понимают, 
+                        что новые знания, решения и действия приводят к значимым результатам </p>
+                <button class="additional-info__more">Узнать больше</button>
             </div>
         </div>
 </body>
