--- a/main.html
+++ b/main.html
@@ -29,27 +29,23 @@
                     </div>
                 </div>
             </div>
-            <div class="flex-header">
-                <div class="flex-header-item">
-                    <a href="http://переподготовка-вшу.белгу.рф/" target="__blank">
-                        <img src="/dir/images/vhsu-hor4.png" alt="Высшая школа управления">
-                    </a>
+            <div class="flex-wrap">
+                <div class="flex-header">
+                    <div class="flex-header-logo">
+                        <a href="http://переподготовка-вшу.белгу.рф/" target="__blank">
+                            <img src="/dir/images/vhsu-hor4.png" alt="Высшая школа управления">
+                        </a>
+                    </div>
+                    <div class="flex-header-title">
+                        <h1>ВЫСШАЯ ШКОЛА УПРАВЛЕНИЯ</h1>
+                    </div>
                 </div>
-                <div class="flex-header-item">
-                    <h1>Высшая школа управления</h1>
+                <div class="additional-info">
+                    <p class="additional-info__text">Цель ВШУ - помочь реализовать возможности и потенциал специалистов, которые хотят большего и понимают, 
+                            что новые знания, решения и действия приводят к значимым результатам </p>
+                    
+                    <a class="additional-info__more" href="http://переподготовка-вшу.белгу.рф/" target="__blank">Узнать больше о нас</a>
                 </div>
-                <div class="flex-header-item">
-                    <a href="https://www.bsu.edu.ru/bsu/" target="__blank">
-                        <img src="/dir/images/svg/Logotip_BSU.svg" alt='НИУ "БелГУ"'>
-                    </a>
-                </div>
-            </div>
-
-            <!-- Доролнительная информация --> 
-            <div class="additional-info">
-                <p class="additional-info__text">Цель ВШУ - помочь реализовать возможности и потенциал специалистов, которые хотят большего и понимают, 
-                        что новые знания, решения и действия приводят к значимым результатам </p>
-                <button class="additional-info__more">Узнать больше</button>
             </div>
         </div>
 </body>
