--- a/main.html
+++ b/main.html
@@ -13,40 +13,41 @@
     <link rel="stylesheet" href="./dir/style/style.css" type="text/css">
 </head>
 <body>
-        <div class="header">
-            <div class="toolbar">
-                <div class="flex-toolbar">
-                    <div class="flex-toolbar-questions flex-toolbar-item">
-                        <p>Есть вопросы?</p>
-                    </div>
-                    <div class="flex-toolbar-number flex-toolbar-item">
-                        <div></div>
-                        <a href="tel:+7(4722)301180">+7 (4722) 30-11-80</a>
-                    </div>
-                    <div class="flex-toolbar-email flex-toolbar-item">
-                        <div></div>
-                        <a href="mailto:vshu@bsu.edu.ru">vshu@bsu.edu.ru</a>
-                    </div>
+    <div class="header">
+        <div class="toolbar">
+            <div class="flex-toolbar">
+                <div class="flex-toolbar-questions flex-toolbar-item">
+                    <p>Есть вопросы?</p>
                 </div>
-            </div>
-            <div class="flex-wrap">
-                <div class="flex-header">
-                    <div class="flex-header-logo">
-                        <a href="http://переподготовка-вшу.белгу.рф/" target="__blank">
-                            <img src="/dir/images/vhsu-hor4.png" alt="Высшая школа управления">
-                        </a>
-                    </div>
-                    <div class="flex-header-title">
-                        <h1>ВЫСШАЯ ШКОЛА УПРАВЛЕНИЯ</h1>
-                    </div>
+                <div class="flex-toolbar-number flex-toolbar-item">
+                    <div></div>
+                    <a href="tel:+7(4722)301180">+7 (4722) 30-11-80</a>
                 </div>
-                <div class="additional-info">
-                    <p class="additional-info__text">Цель ВШУ - помочь реализовать возможности и потенциал специалистов, которые хотят большего и понимают, 
-                            что новые знания, решения и действия приводят к значимым результатам </p>
-                    
-                    <a class="additional-info__more" href="http://переподготовка-вшу.белгу.рф/" target="__blank">Узнать больше о нас</a>
+                <div class="flex-toolbar-email flex-toolbar-item">
+                    <div></div>
+                    <a href="mailto:vshu@bsu.edu.ru">vshu@bsu.edu.ru</a>
                 </div>
             </div>
         </div>
+        <div class="flex-wrap">
+            <div class="flex-header-wrap">
+                    <div class="flex-header">
+                        <div class="flex-header-logo">
+                            <a href="http://переподготовка-вшу.белгу.рф/" target="__blank">
+                                <img src="/dir/images/vhsu-hor4.png" alt="Высшая школа управления">
+                            </a>
+                        </div>
+                        <div class="flex-header-title">
+                            <h1>ВЫСШАЯ ШКОЛА УПРАВЛЕНИЯ</h1>
+                        </div>
+                    </div>
+                    <div class="additional-info">
+                        <p class="additional-info__text">Цель ВШУ - помочь реализовать возможности и потенциал специалистов, которые хотят большего и понимают, 
+                                что новые знания, решения и действия приводят к значимым результатам </p>
+                        <a class="additional-info__more" href="http://переподготовка-вшу.белгу.рф/" target="__blank">Узнать больше о нас</a>
+                    </div>
+                </div>
+        </div>
+    </div>
 </body>
 </html>
