--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
     <div class="header">
         <div class="toolbar">
             <div class="flex-toolbar">
-                <div class="flex-toolbar-questions flex-toolbar-item">
+                <div class="flex-toolbar-questions">
                     <p>Есть вопросы?</p>
                 </div>
                 <div class="flex-toolbar-number flex-toolbar-item">
@@ -31,22 +31,26 @@
         </div>
         <div class="flex-wrap">
             <div class="flex-header-wrap">
-                    <div class="flex-header">
-                        <div class="flex-header-logo">
-                            <a href="http://переподготовка-вшу.белгу.рф/" target="__blank">
-                                <img src="/dir/images/vhsu-hor4.png" alt="Высшая школа управления">
-                            </a>
-                        </div>
-                        <div class="flex-header-title">
-                            <h1>ВЫСШАЯ ШКОЛА УПРАВЛЕНИЯ</h1>
-                        </div>
+                <div class="flex-header">
+                    <div class="flex-header-logo">
+                        <a href="http://переподготовка-вшу.белгу.рф/" target="__blank">
+                            <img src="/dir/images/vhsu-hor4.png" alt="Высшая школа управления">
+                        </a>
                     </div>
-                    <div class="additional-info">
-                        <p class="additional-info__text">Цель ВШУ - помочь реализовать возможности и потенциал специалистов, которые хотят большего и понимают, 
-                                что новые знания, решения и действия приводят к значимым результатам </p>
-                        <a class="additional-info__more" href="http://переподготовка-вшу.белгу.рф/" target="__blank">Узнать больше о нас</a>
+                    <div class="flex-header-title">
+                        <h1>ВЫСШАЯ ШКОЛА УПРАВЛЕНИЯ</h1>
                     </div>
                 </div>
+                <div class="additional-info">
+                    <p class="additional-info__text">Цель ВШУ - помочь реализовать возможности и потенциал специалистов, которые хотят большего и понимают, 
+                            что новые знания, решения и действия приводят к значимым результатам. </p>
+                    <a class="additional-info__more" href="http://переподготовка-вшу.белгу.рф/" target="__blank">Узнать больше</a>
+                </div>
+            </div>
+            <div class="nav-buttons">
+                <button class="nav-buttons__rand">Рандомайзер</button>
+                <button class="nav-buttons__timer">Таймер</button>
+            </div>
         </div>
     </div>
 </body>
