Начал работу над рандомом

--- a/main.html
+++ b/main.html
@@ -53,5 +53,21 @@
             </div>
         </div>
     </div>
+    <div class="random">
+        <div class="random-content">
+            <h2 class="random-content-title">Введите диапазон</h2>
+            <form action="" class="random-content-form">
+                <!-- <label for="for">От</label> -->
+                <div class="random-content-form__from">
+                    <input type="text" name="from">
+                </div>
+                <!-- <label for="to">До</label> -->
+                <div class="random-content-form__to">
+                    <input type="text" name="to">
+                </div>
+            </form>
+            <button class="random-content__count"></button>
+        </div>
+    </div>   
 </body>
 </html>
