Готов блок рандомайзера(второй вариант фона)

--- a/main.html
+++ b/main.html
@@ -53,20 +53,23 @@
             </div>
         </div>
     </div>
+
+    <!-- Рандомайзер -->
+
     <div class="random">
         <div class="random-content">
             <h2 class="random-content-title">Введите диапазон</h2>
-            <form action="" class="random-content-form">
-                <!-- <label for="for">От</label> -->
+            <form class="random-content-form">
                 <div class="random-content-form__from">
+                    <label for="for">От</label>
                     <input type="text" name="from">
                 </div>
-                <!-- <label for="to">До</label> -->
                 <div class="random-content-form__to">
+                    <label for="to">До</label>
                     <input type="text" name="to">
                 </div>
             </form>
-            <button class="random-content__count"></button>
+            <button class="random-content-count">Сгенерировать</button>
         </div>
     </div>   
 </body>
