Таймер доделан с первоначальным фоном

--- a/main.html
+++ b/main.html
@@ -71,6 +71,32 @@
             </form>
             <button class="random-content-count">Сгенерировать</button>
         </div>
-    </div>   
+    </div>  
+    
+    <!-- Таймер -->
+    
+    <div class="timer">
+        <h2 class="timer-title">Введите значения для таймера</h2>
+        <div class="timer-setting">
+            <div class="hours-setter">
+                <label for="hours">Часы</label>
+                <input type="text" class="timer-setting__hours" name="hours"></input>
+            </div>
+            <div class="minutes-setter">
+                <label for="minutes">Минуты</label>
+                <input type="text" class="timer-setting__minutes" name="minutes"></input>
+            </div>
+            <div class="seconds-setter">
+                <label for="secods">Секунды</label>
+                <input type="text" class="timer-setting__seconds" name="seconds"></input>
+            </div>
+        </div>
+        <button class="timer-start">Начать отсчет</button>
+        <div class="timer-result">
+            <span class="hours">0</span>
+            <span class="minutes">0</span>
+            <span class="seconds">0</span>
+        </div>
+    </div>
 </body>
 </html>
