--- a/main.html
+++ b/main.html
@@ -30,7 +30,6 @@
             </div>
         </div>
         <div class="flex-wrap">
-            <div class="flex-header-wrap">
                 <div class="flex-header">
                     <div class="flex-header-logo">
                         <a href="http://переподготовка-вшу.белгу.рф/" target="__blank">
@@ -42,15 +41,16 @@
                     </div>
                 </div>
                 <div class="additional-info">
-                    <p class="additional-info__text">Цель ВШУ - помочь реализовать возможности и потенциал специалистов, которые хотят большего и понимают, 
+                    <p class="additional-info__text"><span>ВШУ НИУ «БелГУ»</span> — это бизнес-школа, которая предоставляет услуги бизнес-образования, профессиональной переподготовки, 
+                                повышения квалификации, обучения программе МВА, профтестирования и консалтинга. </p>
+                    <p class="additional-info__text"><span>Цель ВШУ</span> - помочь реализовать возможности и потенциал специалистов, которые хотят большего и понимают, 
                             что новые знания, решения и действия приводят к значимым результатам. </p>
                     <a class="additional-info__more" href="http://переподготовка-вшу.белгу.рф/" target="__blank">Узнать больше</a>
-                </div>
             </div>
-            <div class="nav-buttons">
-                <a href="#random-title" class="nav-buttons__rand">Рандомайзер</a>
-                <a href="#timer-title" class="nav-buttons__timer">Таймер</a>
-            </div>
+        </div>
+        <div class="nav-buttons">
+            <a href="#random-title" class="nav-buttons__rand">Рандомайзер</a>
+            <a href="#timer-title" class="nav-buttons__timer">Таймер</a>
         </div>
     </div>
 
