Добавил появление текста в хедере при загрузке страницы

--- a/main.html
+++ b/main.html
@@ -45,7 +45,9 @@
                                 повышения квалификации, обучения программе МВА, профтестирования и консалтинга. </p>
                     <p class="additional-info__text"><span>Цель ВШУ</span> - помочь реализовать возможности и потенциал специалистов, которые хотят большего и понимают, 
                             что новые знания, решения и действия приводят к значимым результатам. </p>
-                    <a class="additional-info__more" href="http://переподготовка-вшу.белгу.рф/" target="__blank">Узнать больше</a>
+                    <div class="additional-info-buttom">
+                        <a class="additional-info-buttom__more" href="http://переподготовка-вшу.белгу.рф/" target="__blank">Узнать больше</a>
+                    </div>      
             </div>
         </div>
         <div class="nav-buttons">
@@ -98,6 +100,6 @@
             <span class="seconds">0</span>
         </div>
     </div>
-<script src="dir/script/smooth-anchor.js"></script>
+<script src="dir/script/main.js"></script>
 </body>
 </html>
