Сделал сброс инпутов, но надо разобраться с их фокусами, как вариан можно туглить классы в фокусе и добавлять нужный после этого

--- a/main.html
+++ b/main.html
@@ -64,14 +64,14 @@
             <form class="random-content-form">
                 <div class="random-content-form__from">
                     <label for="for">От</label>
-                    <input type="text" name="from">
+                    <input type="text" name="from" class="from">
                 </div>
                 <div class="random-content-form__to">
                     <label for="to">До</label>
-                    <input type="text" name="to">
+                    <input type="text" name="to" class="to">
                 </div>
             </form>
-            <button class="random-content-count">Сгенерировать</button>
+            <button type="button" class="random-content-count">Сгенерировать</button>
         </div>
     </div>  
     
@@ -93,7 +93,7 @@
                 <input type="text" class="timer-setting__seconds" name="seconds"></input>
             </div>
         </div>
-        <button class="timer-start">Начать отсчет</button>
+        <button type="button" class="timer-start">Начать отсчет</button>
         <div class="timer-result">
             <span class="hours">0</span>
             <span class="minutes">0</span>
