--- a/main.html
+++ b/main.html
@@ -55,6 +55,7 @@
             <a href="#timer-title" class="nav-buttons__timer">Таймер</a>
         </div>
     </div>
+    <div class="separator"></div>
 
     <!-- Рандомайзер -->
 
@@ -71,9 +72,11 @@
                     <input type="text" name="to" class="to">
                 </div>
             </form>
+            <p class="warning"></p>
             <button type="button" class="random-content-count">Сгенерировать</button>
         </div>
-    </div>  
+    </div>
+    <div class="separator"></div>  
     
     <!-- Таймер -->
     
@@ -93,6 +96,7 @@
                 <input type="text" class="timer-setting__seconds" name="seconds"></input>
             </div>
         </div>
+        <p class="warning"></p>
         <button type="button" class="timer-start">Начать отсчет</button>
         <div class="timer-result">
             <span class="hours">0</span>
