--- a/main.html
+++ b/main.html
@@ -99,11 +99,12 @@
         <p class="warning"></p>
         <button type="button" class="timer-start">Начать отсчет</button>
         <div class="timer-result">
-            <span class="hours">0</span>
-            <span class="minutes">0</span>
-            <span class="seconds">0</span>
+            <span class="hours">00</span>
+            <span class="minutes">00</span>
+            <span class="seconds">00</span>
         </div>
     </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="dir/script/main.js"></script>
 </body>
 </html>
