Сделал рандомайзер, разделил все по функциям

--- a/main.html
+++ b/main.html
@@ -74,6 +74,9 @@
             </form>
             <p class="warning"></p>
             <button type="button" class="random-content-count">Сгенерировать</button>
+            <div class="random-result-block">
+                <span class="random-result">00</span>
+            </div>
         </div>
     </div>
     <div class="separator"></div>  
