Адаптив готов до 582px с рандомайзером. Надо идти дальше

--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
                         </a>
                     </div>
                     <div class="flex-header-title">
-                        <h1>ВЫСШАЯ ШКОЛА УПРАВЛЕНИЯ</h1>
+                        <h1>ВЫСШАЯ&nbsp ШКОЛА&nbsp УПРАВЛЕНИЯ&nbsp</h1>
                     </div>
                 </div>
                 <div class="additional-info">
