ААдаптив готов, верстка тоже

--- a/main.html
+++ b/main.html
@@ -41,9 +41,9 @@
                     </div>
                 </div>
                 <div class="additional-info">
-                    <p class="additional-info__text"><span>ВШУ НИУ «БелГУ»</span> — это бизнес-школа, которая предоставляет услуги бизнес-образования, профессиональной переподготовки, 
+                    <p class="additional-info__text"><span>ВШУ НИУ «БелГУ»</span> &ndash; это бизнес-школа, которая предоставляет услуги бизнес-образования, профессиональной переподготовки, 
                                 повышения квалификации, обучения программе МВА, профтестирования и консалтинга. </p>
-                    <p class="additional-info__text"><span>Цель ВШУ</span> - помочь реализовать возможности и потенциал специалистов, которые хотят большего и понимают, 
+                    <p class="additional-info__text"><span>Цель ВШУ</span> &ndash; помочь реализовать возможности и потенциал специалистов, которые хотят большего и понимают, 
                             что новые знания, решения и действия приводят к значимым результатам. </p>
                     <div class="additional-info-buttom">
                         <a class="additional-info-buttom__more" href="http://переподготовка-вшу.белгу.рф/" target="__blank">Узнать больше</a>
